added google image search

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "php-common-filterservice",
+  "name": "php-common-uiframework",
   "version": "1.0.0",
   "devDependencies": {
     "grunt": "~0.4.2",
